# more-flashcards

./: .gitignore  cabal.project  flake.nix
pronunciation/: pronunciation.cabal
pronunciation/exe/: CEdict.hs  Main.hs  Pinyin.hs  Unihan.hs
stroke-order/: card-style.css  fetch-data.sh  jsconfig.json  package-lock.json  package.json  stroke-order.cabal  test.html
stroke-order/exe/: Main.hs
stroke-order/js/: stroke-order.js
stroke-order/src/: DataLoading.hs
