cabal-version: 3.4
name: pronunciation
version: 0.1.0.0
license: NONE
build-type: Simple

executable pronunciation
    main-is: Main.hs
    hs-source-dirs: exe
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
      DerivingVia
      LambdaCase
      MultiWayIf
      OverloadedStrings
      RecordWildCards
    build-depends:
      base ^>=4.19.1.0,
      containers,
      directory,
      filepath,
      random,
      stroke-order,
      text,
    other-modules:
      Pinyin
