cabal-version: 3.4
name: pronunciation
version: 0.1.0.0
license: NONE
build-type: Simple

executable pronunciation
    main-is: Main.hs
    hs-source-dirs: exe
    ghc-options: -Wall
    default-language: GHC2024
    default-extensions:
      OverloadedStrings
      RecordWildCards
    build-depends:
      base,
      cc-cedict,
      containers,
      directory,
      filepath,
      random,
      streaming,
      stroke-order,
      text,
    other-modules:
      CEdict
      Pinyin
      Unihan
