cabal-version: 3.4
name: stroke-order
version: 0.1.0.0
license: NONE
build-type: Simple

common shared
    ghc-options: -Wall
    default-language: GHC2024
    default-extensions:
      RecordWildCards
      OverloadedStrings
    build-depends:
      base,
      containers,
      directory,
      filepath,
      random,
      text,
      unicode-data-scripts,

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    DataLoading

executable stroke-order
    import: shared
    main-is: Main.hs
    hs-source-dirs: exe
    build-depends:
      stroke-order
